# agent-account-hub

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release_app.yml
assets/: AgentAccountHub.icns
design/: icon-preview.html
scripts/: CodexAccountHubTray.py  install-app.sh  render_app_icon.py  update_homebrew_cask.py
src/codex_account_hub/: cli.py  core.py  native_window.py  providers.py  tray.py  ui_helpers.py  web.py
tests/: test_core.py  test_providers.py  test_tray.py  test_ui_helpers.py  test_web.py
