[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-account-hub"
version = "0.1.3"
description = "Local multi-account switcher for Codex and Claude Code"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.scripts]
agent-account-hub = "codex_account_hub.cli:main"
codex-account-hub = "codex_account_hub.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
